# unilink-benchmarks

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: benchmark-release.yml
benchmarks/: wirestead_bench_target.hpp
benchmarks/common/: bench_config.hpp  bench_stats.hpp  bench_timer.hpp  latency_runner.hpp  payload.hpp  result_writer.hpp  signal_wait.hpp
benchmarks/strategy/: strategy_matrix.cpp
benchmarks/tcp/: tcp_echo_server.cpp  tcp_latency_client.cpp
benchmarks/udp/: raw_udp_payload_smoke.cpp  udp_echo_server.cpp  udp_latency_client.cpp  udp_payload_smoke.cpp
benchmarks/uds/: uds_echo_server.cpp  uds_latency_client.cpp
cmake/: FetchUnilink.cmake  FetchWirestead.cmake
docs/: benchmark-release-results.md
scripts/: bench_common.sh  collect_environment.py  compare_results.py  generate_release_notes.py  package_results.py  run_all_local.sh  run_latency_matrix.sh  run_raw_udp_payload_smoke.sh  run_release_comparison.sh  run_strategy_matrix.sh  run_strategy_sweep.sh  run_tcp_latency.sh  run_udp_latency.sh  run_udp_payload_smoke.sh  run_uds_latency.sh  summarize_latency_csv.py  summarize_raw_udp_payload_smoke.py  summarize_strategy_csv.py  summarize_udp_payload_smoke.py
